[package]
name = "psocket-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.1"
clap = { version = "3.2.20", features = ["derive"] }
libc = "0.2.132"
lru = "0.8.1"
nix = "0.25.0"
once_cell = "1.15.0"
rand = "0.8.5"
simplelog = "0.12.0"
thiserror = "1.0.35"
