[package]
name = "psocket-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2.154"
nix = { version = "0.28.0", features = ["ptrace", "process"] }
once_cell = "1.19.0"
rand = "0.8.5"
thiserror = "1.0.60"
